--- a/supermercado-flexbox-martes-v1/inicio.html
+++ b/supermercado-flexbox-martes-v1/inicio.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="imagenes/Logo-d1.png" type="image/x-icon">
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/estilos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- *************** menu ******************** -->
@@ -59,11 +60,164 @@
     <!-- *************** fin imagen principal ******************** -->
     <!-- *************** descuentos ******************** -->
         <div class="descuento">
-            <img src="imagenes/jueves.jpg" alt="">
-            <img src="imagenes/hoy.jpg" alt="">
-            <img src="imagenes/miercoles.jpg" alt="">
+            <div class="titulo-des">
+                <h2> Descuento de temporada </h2>
+            </div>
+            <div class="con-descuento">
+                <img src="imagenes/jueves.jpg" alt="">
+                <img src="imagenes/hoy.jpg" alt="">
+                <img src="imagenes/miercoles.jpg" alt="">
+            </div>  
         </div>
     <!-- *************** fin descuentos ******************** -->
+    <!-- *************** productos ******************** -->
+        <div class="productos">
+            <div class="titulo-pro">
+                <h2> Nuestros Productos </h2>
+            </div>
+            <div class="con-productos">
+                <div class="tarjeta">
+                    <img src="imagenes/Arroz.webp" alt="">
+                    <div class="con-texto">
+                        <h3> Arroz </h3>
+                        <p> Libra de arroz Diana Premium</p>
+                    </div>
+                    <div class="botones">
+                        <span> $ 2.000</span>
+                        <a href="#"> Compralo aquí </a>
+                    </div>
+                </div>
+                <div class="tarjeta">
+                    <img src="imagenes/atun.png" alt="">
+                    <div class="con-texto">
+                        <h3> Atun </h3>
+                        <p> Atun en lata 450g</p>
+                    </div>
+                    <div class="botones">
+                        <span> $ 2.000</span>
+                        <a href="#"> Compralo aquí </a>
+                    </div>
+                </div>
+                <div class="tarjeta">
+                    <img src="imagenes/aceite.jpg" alt="">
+                    <div class="con-texto">
+                        <h3> Aceite </h3>
+                        <p> Aceite 1 litro botella</p>
+                    </div>
+                    <div class="botones">
+                        <span> $ 2.000</span>
+                        <a href="#"> Compralo aquí </a>
+                    </div>
+                </div>
+                <div class="tarjeta">
+                    <img src="imagenes/azucar.webp" alt="">
+                    <div class="con-texto">
+                        <h3> Azucar </h3>
+                        <p> Azucar bolsa por 1 kilo</p>
+                    </div>
+                    <div class="botones">
+                        <span> $ 2.000</span>
+                        <a href="#"> Compralo aquí </a>
+                    </div>
+                </div>
+                <div class="tarjeta">
+                    <img src="imagenes/huevos.jpg" alt="">
+                    <div class="con-texto">
+                        <h3> Huevos </h3>
+                        <p> Panal de huevos x 30 und</p>
+                    </div>
+                    <div class="botones">
+                        <span> $ 2.000</span>
+                        <a href="#"> Compralo aquí </a>
+                    </div>
+                </div>
+                <div class="tarjeta">
+                    <img src="imagenes//jamon.jpg" alt="">
+                    <div class="con-texto">
+                        <h3> Jamon </h3>
+                        <p> Jamon por 1kilo rodajas </p>
+                    </div>
+                    <div class="botones">
+                        <span> $ 2.000</span>
+                        <a href="#"> Compralo aquí </a>
+                    </div>
+                </div>
+                <div class="tarjeta">
+                    <img src="imagenes/leche.png" alt="">
+                    <div class="con-texto">
+                        <h3> Leche </h3>
+                        <p> Leche en bolsa 1 litro </p>
+                    </div>
+                    <div class="botones">
+                        <span> $ 2.000</span>
+                        <a href="#"> Compralo aquí </a>
+                    </div>
+                </div>
+                <div class="tarjeta">
+                    <img src="imagenes/mantequilla.webp" alt="">
+                    <div class="con-texto">
+                        <h3> Mantequilla </h3>
+                        <p> Mantequilla en barra </p>
+                    </div>
+                    <div class="botones">
+                        <span> $ 2.000</span>
+                        <a href="#"> Compralo aquí </a>
+                    </div>
+                </div>
+                <div class="tarjeta">
+                    <img src="imagenes/pasta.webp" alt="">
+                    <div class="con-texto">
+                        <h3> Pasta </h3>
+                        <p> Pastas doria </p>
+                    </div>
+                    <div class="botones">
+                        <span> $ 2.000</span>
+                        <a href="#"> Compralo aquí </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <!-- *************** fin productos ******************** -->
+    <!-- *************** servicios ******************** -->
+        <div class="servicios">
+            <div class="titulo-ser">
+                <h2> Nuestros Servicios </h2>
+            </div>
+            <div class="con-servicios">
+                <div class="servicio-1">
+                    <img src="imagenes/Rappi-01.jpg" alt="">
+                    <div class="con-texto">
+                        <h3> Domicilio las 24 Horas </h3>
+                        <p> 
+                            tenemos domicilios para todos Nuestros
+                            productos las 24 horas 7 dias a la semana
+                        </p>
+                        <ul>
+                            <li> Licores </li>
+                            <li> Drogueria </li>
+                            <li> Jugueteria </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="servicio-2">
+                    <div class="con-texto">
+                        <h3> Domicilio las 24 Horas </h3>
+                        <p> 
+                            tenemos domicilios para todos Nuestros
+                            productos las 24 horas 7 dias a la semana
+                        </p>
+                        <ul>
+                            <li> Licores </li>
+                            <li> Drogueria </li>
+                            <li> Jugueteria </li>
+                        </ul>
+                    </div>
+                    <img src="imagenes/Rappi-01.jpg" alt="">
+                </div>
+                
+            </div>
+        </div>
+    <!-- *************** fin servicios ******************** -->
 
     <script src="css/all.js"></script>
 </body>
