--- a/supermercado-flexbox-martes-v1/inicio.html
+++ b/supermercado-flexbox-martes-v1/inicio.html
@@ -218,6 +218,26 @@
             </div>
         </div>
     <!-- *************** fin servicios ******************** -->
+    <!-- *************** nosotros ******************** -->
+        <div class="nosotros">
+            <div class="titulo-nos">
+                <h2> Conocenos </h2>
+            </div>
+            <div class="con-nosotros">
+                <div class="con-video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/V9J5-Bmd-s4" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <div class="con-texto">
+                    <h2> Quienes somos </h2>
+                    <p>
+                        Somos el mejor supermercado de la region
+                        tenemos mas de 5 sucursales en la ciudad
+                        de medellin, dando la mejor calidad y servicio.
+                    </p>
+                </div>
+            </div>
+        </div>
+    <!-- *************** fin nosostros ******************** -->
 
     <script src="css/all.js"></script>
 </body>
